#9 parse test csv of the ING-bank and return the parsed result
