# server/src/main/kotlin/com/github/simonhauck/budgetturtle/server/dataimport/adapter/http/ImportDataController.kt
@@ -1,6 +1,8 @@
 package com.github.simonhauck.budgetturtle.server.dataimport.adapter.http
 
-import java.math.BigDecimal
+import com.github.simonhauck.budgetturtle.server.dataimport.domain.service.DataImportService
+import com.github.simonhauck.budgetturtle.server.dataimport.domain.service.TransactionDetails
+import java.util.Base64
 import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestMapping
@@ -8,11 +10,27 @@ import org.springframework.web.bind.annotation.RestController
 
 @RestController
 @RequestMapping("/api/import")
-class ImportDataController {
+class ImportDataController(
+    private val dataImportService: DataImportService,
+) {
 
     @PostMapping("")
     fun importBankStatementCsv(@RequestBody encodedFileDto: EncodedFileDto): ImportResultDto {
-        return ImportResultDto("some name", true, "", emptyList())
+        val transactionDetails =
+            dataImportService.importCsv(decodeBase64(encodedFileDto.base64Content))
+
+        return ImportResultDto(
+            encodedFileDto.name,
+            true,
+            "",
+            transactionDetails.map { TransactionDetailsDto.fromModel(it) }
+        )
+    }
+
+    companion object {
+
+        fun decodeBase64(content: String): String =
+            Base64.getDecoder().decode(content).decodeToString()
     }
 }
 
@@ -20,15 +38,29 @@ data class ImportResultDto(
     val name: String,
     val success: Boolean,
     val errorMsg: String,
-    val detectedTransactions: List<TransactionDto>
+    val detectedTransactions: List<TransactionDetailsDto>
 )
 
-data class TransactionDto(
+data class TransactionDetailsDto(
     val date: String,
     val clientName: String,
-    val usageDescription: String,
-    val transactionAmount: BigDecimal,
-)
+    val bookingType: String,
+    val purpose: String,
+    val transactionAmount: Double
+) {
+    companion object {
+
+        fun fromModel(model: TransactionDetails): TransactionDetailsDto {
+            return TransactionDetailsDto(
+                date = model.date,
+                clientName = model.clientName,
+                bookingType = model.bookingType,
+                purpose = model.purpose,
+                transactionAmount = model.transactionAmount.toDouble()
+            )
+        }
+    }
+}
 
 data class EncodedFileDto(
     val name: String,
